[gd_scene load_steps=8 format=2]

[ext_resource path="res://sounds/sounds/mouse_trapped.wav" type="AudioStream" id=1]
[ext_resource path="res://sprites/mouse_trap.png" type="Texture" id=2]
[ext_resource path="res://scripts/MouseTrap_node.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "MouseTrap"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.98 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse_trapped_sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.907, 34.6942 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 24.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.125, 9.45313 )

[node name="MouseTrap" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3

[node name="mouse_trapped_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MouseTrap = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25.4315, 20.7592 )
rotation = 0.959931
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -25, 18 )
rotation = 0.174533
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 24.375, 10 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
